# HRI_Drone_project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Experimental_Protocol & Evaluation.txt  HRI_Drone_project.code-workspace  Intent_State_Machine.txt  Project_Context.txt  Signal_Processing & Filtering_Design_Note.txt  System_Architecture_Specification.txt  docker-compose.yaml  pixi.toml  run_drone.sh  인텐트_설계
ESP32/: app_main.cpp
ESP32/main/include/: Flex_Driver.hpp  IMU_Driver.hpp  Magnet_Driver.hpp  Signal_Bridge_Node.hpp
ESP32/main/src/: Flex_Driver.cpp  IMU_Driver.cpp  Magnet_Driver.cpp  Signal_Bridge_Node.cpp
gaze/: Flex_Key_Map.py  IMU_Key_Map.py  Teleop_Node.py  wareable.urdf  wearable_sim.launch.py
include/HRI_Drone_HPP/: Madgwick_Filter.hpp  Quaternion_to_Euler.hpp  Signal_Bridge_Node.hpp  Signal_Processor_Node.hpp
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hri_drone_project/lib/hri_drone_project/: Signal_Bridge_Node
install/hri_drone_project/share/hri_drone_project/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/hri_signal_pkg/share/ament_index/resource_index/package_run_dependencies/: hri_signal_pkg
ros_ws/install/hri_signal_pkg/share/ament_index/resource_index/parent_prefix_path/: hri_signal_pkg
ros_ws/install/hri_signal_pkg/share/hri_signal_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/hri_signal_pkg/share/hri_signal_pkg/cmake/: hri_signal_pkgConfig-version.cmake  hri_signal_pkgConfig.cmake
ros_ws/install/hri_signal_pkg/share/hri_signal_pkg/environment/: ament_prefix_path.dsv  path.dsv
ros_ws/install/wearable_pkg/lib/wearable_pkg/: scenario_driver  signal_processor  teleop_node
ros_ws/install/wearable_pkg/share/wearable_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/wearable_pkg/share/wearable_pkg/launch/: simulation.launch.py  view_model.launch.py
ros_ws/install/wearable_pkg/share/wearable_pkg/meshes/: bicep.stl  index3_1.stl  index3_2.stl  index3_3.stl  r_forearm.stl  r_hand.stl  r_shoulder.stl  r_shoulder_base.stl
ros_ws/install/wearable_pkg/share/wearable_pkg/urdf/: wearable_hand.urdf
ros_ws/log/: latest_build
ros_ws/session_01/: metadata.yaml  session_01_info.txt
ros_ws/src/hri_signal_pkg/: CMakeLists.txt  package.xml
ros_ws/src/hri_signal_pkg/include/hri_signal_pkg/HRI_Drone_HPP/: EMA_Filter.hpp  Madgwick_Filter.hpp  Mag_Quality.hpp  Mapping_Utils.hpp  Quaternion_to_Euler.hpp  Signal_Processor_Node.hpp  Smooth_Step_Utils.hpp
ros_ws/src/hri_signal_pkg/msg/: HRIFiltered.msg  HRI_Attitude.msg  HRI_Flex.msg
ros_ws/src/hri_signal_pkg/src/: EMA_Filter.cpp  Madgwick_Filter.cpp  Mag_Quality.cpp  Mapping_Utils.cpp  Quaternion_to_Euler.cpp  Signal_Bridge_main.cpp  Signal_Processor_Node.cpp  Signal_Processor_main.cpp  Smooth_Step_Utils.cpp
ros_ws/src/intent_state_pkg/include/: Hard_Safety_Gate.hpp  Intent_State_Gate_Node.hpp  Manual_Permission_Gate.hpp  RP_Computer.hpp
ros_ws/src/intent_state_pkg/msg/: IntentGateDebug.msg  IntentSetpoint  StateEngaged.msg
ros_ws/src/intent_state_pkg/src/: Hard_Safety_Gate.cpp  Intent_RP.cpp  Intent_State_Gate_Node.cpp  Manual_Permission_Gate.cpp  RP_Computer.cpp
ros_ws/src/wearable_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/wearable_pkg/launch/: simulation.launch.py  view_model.launch.py
ros_ws/src/wearable_pkg/urdf/: wearable_hand.urdf
ros_ws/src/wearable_pkg/wearable_pkg/: Angle_teleop_node.py  Non_noise_teleop_node.py  Scenario_Driver_node.py  teleop_node.py
src/: EMA_Filter.cpp  Madgwick_Filter.cpp  Mapping_Utils.cpp  Quaternion_to_Euler.cpp  Signal_Bridge_Node.cpp  Signal_Bridge_main.cpp  Signal_Processor_Node.cpp  Signal_Processor_Test.cpp  Signal_Processor_main.cpp
test/: Test_Sensor_Node.cpp
